--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 torch==1.6
+torchserve==0.1.1
+torch-model-archiver==0.1.1
 numpy==1.18
-opencv-python==4.3
-future
-psutil
-wheel
-requests
-sentencepiece
+opencv-python>=4.3
