--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 load_models=cartoonize\=cartoonizer.mar
 snapshot_store=FS
 NUM_WORKERS=8
-model_store=model-store
+model_store=model_store
 number_of_gpu=0
 ncs=1
 number_of_netty_threads=32
