--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,5 @@
+inference_address=http://0.0.0.0:8080
+management_address=http://0.0.0.0:8081
 load_models=cartoonize\=cartoonizer.mar
 snapshot_store=FS
 NUM_WORKERS=8
