--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
+  - name: 'docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/cartoonize', '.']
     env:
-      - "DOCKER_BUILDKIT=1"
+      - 'DOCKER_BUILDKIT=1'
 images:
   - 'gcr.io/$PROJECT_ID/cartoonize'
