--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,21 @@
 steps:
-  - name: 'docker'
+  - id: 'pull-experimental'
+    name: 'gcr.io/cloud-builders/docker'
+    args: ['pull', 'docker/dockerfile:experimental']
+    env:
+      - 'DOCKER_BUILDKIT=1'
+
+  - id: 'pull-experimental-1.0'
+    name: 'gcr.io/cloud-builders/docker'
+    args: ['pull', 'docker/dockerfile:1.0-experimental']
+    env:
+      - 'DOCKER_BUILDKIT=1'
+
+  - id: 'build'
+    name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/cartoonize', '.']
     env:
       - 'DOCKER_BUILDKIT=1'
+
 images:
   - 'gcr.io/$PROJECT_ID/cartoonize'
