--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,17 +5,33 @@ steps:
     env:
       - 'DOCKER_BUILDKIT=1'
 
-  - id: 'pull-experimental-1.0'
-    name: 'gcr.io/cloud-builders/docker'
-    args: ['pull', 'docker/dockerfile:1.0-experimental']
-    env:
-      - 'DOCKER_BUILDKIT=1'
+  # - id: 'pull-experimental-1.0'
+  #   name: 'gcr.io/cloud-builders/docker'
+  #   args: ['pull', 'docker/dockerfile:1.0-experimental']
+  #   env:
+  #     - 'DOCKER_BUILDKIT=1'
 
   - id: 'build'
     name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/cartoonize', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/cartoonize:latest', '.']
     env:
       - 'DOCKER_BUILDKIT=1'
 
+  - id: 'push'
+    name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/cartoonize:latest']
+
+  - id: 'deploy'
+    name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args: ['run', 'deploy', 'cartoonize', 
+        '--image', 'gcr.io/$PROJECT_ID/cartoonize:latest', 
+        '--region', 'asia-southeast1', 
+        '--platform', 'managed',
+        '--port', '8080',
+        '--memory', '4Gi',
+        '--cpu', '2'
+    ]
+
 images:
-  - 'gcr.io/$PROJECT_ID/cartoonize'
+  - 'gcr.io/$PROJECT_ID/cartoonize:latest'
